k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-tw-site
spec:
  selector:
    app: my-tw-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
